# FlaskFrameWorkCookbookExercises

./: .gitignore  README.md  pyproject.toml
chapter1/: readme.md
chapter1/app/: __init__.py
chapter1/app/hello/: views.py
chapter1/app/hello2/: __init__.py  models.py  views.py
chapter1/my_instance_folder/: config.cfg
chapter2/: app.py  config.py  requirements.txt
chapter2/product/: views.py
chapter2/templates/: _helpers.html  base.html  header.html  hello.html  time.html
chapter2/templates/products/: home.html  product.html  product_widget.html
