[tool.poetry]
name = "flaskframeworkcookbook"
version = "0.1.0"
description = ""
authors = ["Ray Laurenz Monterola <renz.monterola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
